# spath

./: .gitignore  CMakeLists.txt
include/spath/: macros.h  spath.h
src/: main.c  path.c
